@@ -5,6 +5,7 @@ Version 1.5  2008-08-16
   * can use sendfile syscall to send file in Linux and FreeBSD
   * fcntl set lock.l_len to 0
   * use pthread_attr_setstacksize to increase thread stack size to 1 MB
+  * fix bug: add O_TRUNC flag when open file to write
 
 Version 1.4  2008-08-10
   * storage server recv file method change 
